Programs/CodeChef - Quarantest/Hospital Beds/attic/stderr
c:\Users\prash\Documents\Salil\Programming\Competitive-Programmming\Programs\CodeChef - Quarantest\Hospital Beds\sol.cpp: In function 'int main()':
c:\Users\prash\Documents\Salil\Programming\Competitive-Programmming\Programs\CodeChef - Quarantest\Hospital Beds\sol.cpp:89:22: error: expected ';' before 'else'
   89 |    cout << "UNSAFE\n" else cout << "SAFE\n";
      |                      ^~~~~
      |                      ;
